@@ -1,0 +1,11 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE beans PUBLIC  "-//SPRING//DTD BEAN//EN" "http://www.springframework.org/dtd/spring-beans.dtd">
+
+<beans>
+
+	<bean id="a" class="org.springframework.beans.factory.xml.DependenciesBean"
+		dependencyCheck="objects">
+		<!-- <property name="name"><value>Rod</value></property> -->
+	</bean>
+
+</beans>
